--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 <body>
     <main>
-        <!-- HEADER -->
-        <header class="header">
+        <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
                     <!-- Logo -->
@@ -40,7 +39,12 @@
                         <a href="#!" class="btn action-btn">Sign up</a>
                     </div>
                 </nav>
+            </div>
+        </header>
 
+        <!-- HEADER -->
+        <div class="hero-wrap">
+            <div class="content">
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Wekcome to Besnik Agency</p>
@@ -57,7 +61,7 @@
                         class="hero-img">
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- CLIENTS -->
         <div class="clients">
