--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <div class="content">
                 <nav class="navbar">
                     <!-- Logo -->
-                    <a href="#!">
+                    <a href="#">
                         <img src="./assets/img/logo.svg" alt="Besnik.">
                     </a>
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Services</a></li>
-                        <li><a href="#!">Resoures</a></li>
-                        <li><a href="#!">Contact</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#resoures">Resoures</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
 
                     <!-- Action -->
@@ -107,7 +107,7 @@
         </div>
 
         <!-- GUIDES -->
-        <div class="guides">
+        <div id="services" class="guides">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">
@@ -155,7 +155,7 @@
         </div>
 
         <!-- FEATURED -->
-        <div class="featured">
+        <div id="features" class="featured">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -242,7 +242,7 @@
         </div>
 
         <!-- STATS -->
-        <div class="stats">
+        <div id="resoures" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -337,7 +337,7 @@
         </div>
 
         <!-- FOOTER -->
-        <footer class="footer">
+        <footer id="contact" class="footer">
             <div class="content">
                 <div class="row row-top">
                     <div class="column">
